--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
             My Skills
           </h3>
           <div
-            class="flex gap-4 md:gap-5 lg:gap-8 justify-center bg-blue-950/50 w-1/2 border-2 border-orange-400 rounded-full p-2"
+            class="flex gap-4 md:gap-5 lg:gap-8 justify-center bg-blue-950/50 w-1/2 border-2 border-orange-400 rounded-full p-2 min-w-70"
           >
             <i
               class="bxl bx-html5 text-white text-4xl hover:scale-125 bx-bounce-hover transition duration-300 ease md:text-5xl lg:text-6xl"
@@ -597,9 +597,9 @@
     <!-- project section start -->
     <section>
       <div id="project" class="w-full px-4 mt-20 scroll-mt-20">
-        <h2 class="text-lg font-bold mb-5 text-white">Lastest Project</h2>
+        <h2 class="text-lg font-bold mb-5 text-white">Latest Project</h2>
         <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-6 px-4"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-6 px-4 justify-center items-center"
         >
           <div
             class="flex flex-col h-full bg-blue-950 rounded-lg shadow-lg shadow-orange-400/50 group overflow-hidden"
@@ -733,7 +733,7 @@
             Contact Me
           </h2>
           <div
-            class="flex gap-4 md:gap-5 lg:gap-8 justify-center bg-blue-950/50 w-1/3 lg:w-1/4 border-2 border-orange-400 rounded-full p-2"
+            class="flex gap-4 md:gap-5 lg:gap-8 justify-center bg-blue-950/50 w-1/3 lg:w-1/4 border-2 border-orange-400 rounded-full p-2 min-w-50"
           >
             <a href="#">
               <i
