Update portfolio: tambah project baru dan README

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio-Baim</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- box icon cdn -->
     <link
       href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css"
       rel="stylesheet"
@@ -17,11 +18,15 @@
       href="https://cdn.boxicons.com/fonts/animations.min.css"
       rel="stylesheet"
     />
+    <!-- google fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- aos animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <!-- custom css -->
     <style>
       /* Gaya kustom untuk tekstur gradient */
       .text-gradient {
@@ -601,28 +606,30 @@
         <div
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-6 px-4 justify-center items-center"
         >
-          <div
+          <a
+            href="https://baim0306.github.io/Japan-Gourmet/"
             class="flex flex-col h-full bg-blue-950 rounded-lg shadow-lg shadow-orange-400/50 group overflow-hidden"
           >
             <div class="w-full h-50 overflow-hidden">
               <div
-                style="background-image: url('img/book-cover-design.webp')"
+                style="background-image: url('img/japan-gourmet.webp')"
                 class="w-full h-full bg-cover bg-center rounded-t-lg group-hover:scale-110 transition duration-300 ease-in-out"
               ></div>
             </div>
             <div class="p-4 flex-1 flex flex-col justify-start text-left">
               <h3 class="text-lg text-orange-400 font-semibold">
-                Book Cover Design
+                Japan Gourmet
               </h3>
               <p
                 class="text-sm text-slate-600 mt-2 leading-relaxed md:text-sm lg:text-xs"
               >
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel
-                impedit ipsum dolorum dignissimos est culpa deserunt, distinctio
-                iusto nemo explicabo debitis dicta inventore numquam quae?
+                Website katalog restoran dan makanan di Jepang. Berisi tentang
+                tipe restoran yang umum dan makanan yang wajib dicoba kalau
+                kalian berkunjung ke Jepang, juga informasi tentang cara makan,
+                cara penyajian, bahan-bahan, dan juga kandungan gizi didalamya.
               </p>
             </div>
-          </div>
+          </a>
           <div
             class="flex flex-col h-full bg-blue-950 rounded-lg shadow-lg shadow-orange-400/50 group overflow-hidden"
           >
