menambahkan link ke project GameBot - Katalog Game

--- a/index.html
+++ b/index.html
@@ -630,32 +630,29 @@
               </p>
             </div>
           </a>
-          <div
+          <a 
+            href="https://vercel.com/baimdcs-projects/game-bot-katalog-game/3fEToqieT5ivgTRYsh8ZHnSzAB2e"
             class="flex flex-col h-full bg-blue-950 rounded-lg shadow-lg shadow-orange-400/50 group overflow-hidden"
           >
             <div class="w-full h-50 overflow-hidden">
               <div
                 style="
-                  background-image: url('img/marketplace-design-and-develop.webp');
+                  background-image: url('img/gamebot.jpg');
                 "
                 class="w-full h-full bg-cover bg-top rounded-t-lg group-hover:scale-110 transition duration-300 ease-in-out"
               ></div>
             </div>
             <div class="p-4 flex-1 flex flex-col justify-start text-left">
               <h3 class="text-lg text-orange-400 font-semibold">
-                Marketplace Design and Development
+                GameBot - Katalog Game
               </h3>
               <p
                 class="text-sm text-slate-600 mt-2 leading-relaxed md:text-sm lg:text-xs"
               >
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Incidunt culpa enim, magnam iste voluptates sed quaerat dolores
-                totam nihil distinctio perspiciatis rem maxime, omnis laudantium
-                ullam saepe deserunt vero quibusdam odio aut animi praesentium
-                obcaecati quod? Dicta voluptatum omnis vel?
+                Aplikasi Web katalog game sederhana yang menampilkan daftar game, dilengkapi dengan fitur pencarian, filter genre, dan pengurutan (sorting).
               </p>
             </div>
-          </div>
+          </a>
           <div
             class="flex flex-col h-full bg-blue-950 rounded-lg shadow-lg shadow-orange-400/50 group overflow-hidden"
           >
