Final update for index.html and new gamebot asset

--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
             </div>
           </a>
           <a 
-            href="https://vercel.com/baimdcs-projects/game-bot-katalog-game/3fEToqieT5ivgTRYsh8ZHnSzAB2e"
+            href="https://game-bot-katalog-game.vercel.app/"
             class="flex flex-col h-full bg-blue-950 rounded-lg shadow-lg shadow-orange-400/50 group overflow-hidden"
           >
             <div class="w-full h-50 overflow-hidden">
