--- a/index.html
+++ b/index.html
@@ -630,14 +630,14 @@
               </p>
             </div>
           </a>
-          <a 
-            href="https://game-bot-katalog-game.vercel.app/"
+          <a
+            href="https://baim0306.github.io/Japan-Gourmet/"
             class="flex flex-col h-full bg-blue-950 rounded-lg shadow-lg shadow-orange-400/50 group overflow-hidden"
           >
             <div class="w-full h-50 overflow-hidden">
               <div
                 style="background-image: url('/img/gamebot.jpg')"
-                class="w-full h-full bg-cover bg-top rounded-t-lg group-hover:scale-110 transition duration-300 ease-in-out"
+                class="w-full h-full bg-cover bg-center rounded-t-lg group-hover:scale-110 transition duration-300 ease-in-out"
               ></div>
             </div>
             <div class="p-4 flex-1 flex flex-col justify-start text-left">
