--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
             </div>
           </a>
           <a
-            href="https://baim0306.github.io/Japan-Gourmet/"
+            href="https://game-bot-katalog-game.vercel.app/"
             class="flex flex-col h-full bg-blue-950 rounded-lg shadow-lg shadow-orange-400/50 group overflow-hidden"
           >
             <div class="w-full h-50 overflow-hidden">
