--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
           >
             <div class="w-full h-50 overflow-hidden">
               <div
-                style="background-image: url('/img/japan-gourmet.webp')"
+                style="background-image: url('img/japan-gourmet.webp')"
                 class="w-full h-full bg-cover bg-center rounded-t-lg group-hover:scale-110 transition duration-300 ease-in-out"
               ></div>
             </div>
@@ -636,7 +636,7 @@
           >
             <div class="w-full h-50 overflow-hidden">
               <div
-                style="background-image: url('/img/gamebot.jpg')"
+                style="background-image: url('img/gamebot.jpg')"
                 class="w-full h-full bg-cover bg-center rounded-t-lg group-hover:scale-110 transition duration-300 ease-in-out"
               ></div>
             </div>
